v1：支持连接、查询功能
